# server_on_repl

./: .breakpoints  .gitignore  Errors not to make next time you create a repl server  Errors not to make when creating a repl backend  add_number.py  app.py  call_location.py  old_spam_english_only.csv  pyproject.toml  requirements.txt  search_number.py  sms_testing.py  spam.csv  spam_messages - Sheet1.csv  spam_messages.csv  spam_temp.csv  spam_update.py  speechrecord.py  temp_file.csv  test_spam.csv  translating_database.py  unwanted_calls - test_vrai.csv  unwanted_calls.csv
repl_env/Scripts/: activate  activate.bat
