[tool.poetry]
name = "repl_python3_serveronrepl"
version = "0.1.0"
description = ""
authors = ["XinLei <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pandas = "^1.3.0"
phonenumbers = "^8.12.28"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
